code/chapter 04/Kubernetes Networking/ExternalName.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "nginx-example"
  namespace: "mynamespace"
spec:
  type: ExternalName
  externalName: mydb.example.com
