code/chapter 04/Kubernetes Networking/LoadBalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "nginx-example"
  namespace: "mynamespace"
spec:
  type: LoadBalancer
  selector:
    app: "nginx"
  ports:
    - name: http
      port: 80
      targetPort: 9376
